[gd_scene load_steps=9 format=3 uid="uid://c7hqp2kuj8xq5"]

[ext_resource type="Script" path="res://scripts/weapon_shop.gd" id="1_wkwj5"]
[ext_resource type="Texture2D" uid="uid://dxunmhf25os5p" path="res://resources/sprites/dragon-in-shop.png" id="2_7m3va"]
[ext_resource type="Texture2D" uid="uid://dc36bpll4ldvy" path="res://resources/sprites/background-itemshop.png" id="2_8ayfd"]
[ext_resource type="PackedScene" uid="uid://5n0srb1iavr0" path="res://Scenes/Entities/hanger.tscn" id="3_01yxm"]
[ext_resource type="Texture2D" uid="uid://csaod2ht6ymhf" path="res://resources/sprites/next-prev.png" id="5_75nm7"]
[ext_resource type="Texture2D" uid="uid://kg8lti6ql3wt" path="res://resources/sprites/caution-symbol.png" id="6_1g72y"]
[ext_resource type="Texture2D" uid="uid://dj87ja156haea" path="res://resources/sprites/real-box.png" id="6_g8uxk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2sdlv"]
content_margin_left = 450.0
content_margin_right = 0.0

[node name="WeaponShop" type="CanvasLayer"]
script = ExtResource("1_wkwj5")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(640, 360)
scale = Vector2(4, 4)
texture = ExtResource("2_8ayfd")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_2sdlv")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 400

[node name="Hanger" parent="Control/ScrollContainer/HBoxContainer" instance=ExtResource("3_01yxm")]
layout_mode = 2

[node name="Hanger2" parent="Control/ScrollContainer/HBoxContainer" instance=ExtResource("3_01yxm")]
layout_mode = 2

[node name="Hanger3" parent="Control/ScrollContainer/HBoxContainer" instance=ExtResource("3_01yxm")]
layout_mode = 2

[node name="Hanger4" parent="Control/ScrollContainer/HBoxContainer" instance=ExtResource("3_01yxm")]
layout_mode = 2

[node name="Hanger5" parent="Control/ScrollContainer/HBoxContainer" instance=ExtResource("3_01yxm")]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Control/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="Dra\'ko" type="Sprite2D" parent="."]
position = Vector2(640, 360)
scale = Vector2(4, 4)
texture = ExtResource("2_7m3va")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 832.0
offset_top = 352.0
offset_right = 1232.0
offset_bottom = 640.0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
color = Color(0.733333, 0.603922, 0.458824, 0.447059)

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Name"
horizontal_alignment = 1

[node name="ToBuy" type="HBoxContainer" parent="VBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Price" type="Label" parent="VBoxContainer/ColorRect/VBoxContainer/ToBuy"]
layout_mode = 2
text = "Price:"

[node name="PriceLabel" type="Label" parent="VBoxContainer/ColorRect/VBoxContainer/ToBuy"]
layout_mode = 2
text = "0"

[node name="BuyButton" type="Button" parent="VBoxContainer/ColorRect/VBoxContainer/ToBuy"]
layout_mode = 2
text = "Buy"

[node name="Bought" type="HBoxContainer" parent="VBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Bought!" type="Label" parent="VBoxContainer/ColorRect/VBoxContainer/Bought"]
layout_mode = 2
text = "Bought!"

[node name="Equip" type="Button" parent="VBoxContainer/ColorRect/VBoxContainer/Bought"]
layout_mode = 2
text = "Equip"

[node name="FlavorText" type="Label" parent="VBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PrevSprite" type="Sprite2D" parent="VBoxContainer/HBoxContainer"]
position = Vector2(102.75, 39.75)
scale = Vector2(3.5, 3.5)
texture = ExtResource("5_75nm7")
hframes = 2

[node name="Prev" type="Button" parent="VBoxContainer/HBoxContainer/PrevSprite"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -27.0
offset_top = -9.0
offset_right = -30.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
metadata/_edit_use_anchors_ = true

[node name="NextSprite" type="Sprite2D" parent="VBoxContainer/HBoxContainer"]
position = Vector2(301.75, 39.75)
scale = Vector2(3.5, 3.5)
texture = ExtResource("5_75nm7")
hframes = 2
frame = 1

[node name="Next" type="Button" parent="VBoxContainer/HBoxContainer/NextSprite"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -27.0
offset_top = -9.0
offset_right = -30.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
metadata/_edit_use_anchors_ = true

[node name="Next" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
text = "Next"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 656.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_group_ = true

[node name="MenuButtonRow" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/MenuButtonRow"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("6_g8uxk")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Label" type="Label" parent="MarginContainer/MenuButtonRow/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuButton" type="Button" parent="MarginContainer/MenuButtonRow/NinePatchRect"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Main Menu"

[node name="NinePatchRect2" type="NinePatchRect" parent="MarginContainer/MenuButtonRow"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("6_g8uxk")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Label" type="Label" parent="MarginContainer/MenuButtonRow/NinePatchRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsMenuButton" type="Button" parent="MarginContainer/MenuButtonRow/NinePatchRect2"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Settings Menu"

[node name="NinePatchRect3" type="NinePatchRect" parent="MarginContainer/MenuButtonRow"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("6_g8uxk")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Label" type="Label" parent="MarginContainer/MenuButtonRow/NinePatchRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Item Shop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemShopButton" type="Button" parent="MarginContainer/MenuButtonRow/NinePatchRect3"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
text = "Item Shop"

[node name="NinePatchRect4" type="NinePatchRect" parent="MarginContainer/MenuButtonRow"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("6_g8uxk")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Label" type="Label" parent="MarginContainer/MenuButtonRow/NinePatchRect4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Fight Scene"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FightSceneButton" type="Button" parent="MarginContainer/MenuButtonRow/NinePatchRect4"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Fight Scene"

[node name="NinePatchRect5" type="NinePatchRect" parent="MarginContainer/MenuButtonRow"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("6_g8uxk")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Label" type="Label" parent="MarginContainer/MenuButtonRow/NinePatchRect5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Save Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveGameButton" type="Button" parent="MarginContainer/MenuButtonRow/NinePatchRect5"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Save Game"

[node name="NinePatchRect6" type="NinePatchRect" parent="MarginContainer/MenuButtonRow"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("6_g8uxk")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Label" type="Label" parent="MarginContainer/MenuButtonRow/NinePatchRect6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Load Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadGameButton" type="Button" parent="MarginContainer/MenuButtonRow/NinePatchRect6"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Load Game"

[node name="HazardButton" type="TextureButton" parent="."]
anchors_preset = -1
anchor_left = 0.269
anchor_top = 0.2
anchor_right = 0.269
anchor_bottom = 0.2
offset_left = 719.68
offset_top = -128.0
offset_right = 879.68
offset_bottom = 32.0
texture_normal = ExtResource("6_1g72y")
texture_pressed = ExtResource("6_1g72y")
stretch_mode = 4

[node name="WarningScreen" type="ColorRect" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.594
anchor_top = 0.011
anchor_right = 0.594
anchor_bottom = 0.011
offset_left = -512.32
offset_top = 200.08
offset_right = 351.68
offset_bottom = 520.08
color = Color(0.0941176, 0.0941176, 0.0862745, 0.870588)

[node name="MarginContainer" type="MarginContainer" parent="WarningScreen"]
layout_mode = 0
offset_left = 40.0
offset_top = 16.0
offset_right = 848.0
offset_bottom = 304.0

[node name="RichTextLabel" type="RichTextLabel" parent="WarningScreen/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
text = "
WARNING!
Weapons implementation is not complete. All purchases made here will have no effect on coin count or combat.
Please feel free to look around and review the Shop UI for now :D"

[node name="Close" type="Button" parent="WarningScreen"]
layout_mode = 2
offset_left = 752.0
offset_top = 16.0
offset_right = 856.0
offset_bottom = 96.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 38
text = "X"

[connection signal="hangerPressed" from="Control/ScrollContainer/HBoxContainer/Hanger" to="." method="_on_hanger_hanger_pressed"]
[connection signal="hangerPressed" from="Control/ScrollContainer/HBoxContainer/Hanger2" to="." method="_on_hanger_hanger_pressed"]
[connection signal="hangerPressed" from="Control/ScrollContainer/HBoxContainer/Hanger3" to="." method="_on_hanger_hanger_pressed"]
[connection signal="hangerPressed" from="Control/ScrollContainer/HBoxContainer/Hanger4" to="." method="_on_hanger_hanger_pressed"]
[connection signal="hangerPressed" from="Control/ScrollContainer/HBoxContainer/Hanger5" to="." method="_on_hanger_hanger_pressed"]
[connection signal="pressed" from="VBoxContainer/ColorRect/VBoxContainer/ToBuy/BuyButton" to="." method="_on_buy_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PrevSprite/Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NextSprite/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="MarginContainer/MenuButtonRow/NinePatchRect/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/MenuButtonRow/NinePatchRect2/SettingsMenuButton" to="." method="_on_settings_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/MenuButtonRow/NinePatchRect3/ItemShopButton" to="." method="_on_item_shop_button_pressed"]
[connection signal="pressed" from="MarginContainer/MenuButtonRow/NinePatchRect4/FightSceneButton" to="." method="_on_fight_scene_button_pressed"]
[connection signal="pressed" from="MarginContainer/MenuButtonRow/NinePatchRect5/SaveGameButton" to="." method="_on_save_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/MenuButtonRow/NinePatchRect6/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="HazardButton" to="." method="_on_hazard_button_pressed"]
[connection signal="pressed" from="WarningScreen/Close" to="." method="_on_close_pressed"]
